Complete workflow with enhanced VL & CD4 models, comp vs other partitioning methods...

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,12 @@
 
 NEW_HIV_UKRDB_phylotypes.Rproj
 data/
+!data/external/
 rds/
 results/
 scripts/bkp/
 old/
+sierra*
 
 # History files
 .Rhistory
